# document-analyzer

./: .env  .env.example  .gitignore  .testing  DEEPSEEK_INTEGRATION.md  Dockerfile  HOW_TO_CONDUCT_TESTS.md  LayoutAnalysis.py  QUICK_START.md  README.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SETTINGS_FUNCTIONALITY.md  SUMMARIZATION_README.md  SUPABASE_MIGRATION_GUIDE.md  SUPABASE_SETUP_GUIDE.md  app.py  auto_restart.ps1  check_chunks.py  clear_old_chunks.py  database.txt  delete_test_documents.sql  delete_test_documents_fixed.sql  docker-compose.yml  download.py  fix-dashboard.ps1  folder_structure.txt  inspect_chroma_structure.py  modularize-dashboard.ps1  package-lock.json  package.json  pgConnect.json  pyproject.toml  qwen-dashbaord.html  qwen.html  requirements.txt  run.py  run_functional_tests.py  run_migration.py  setup_summarization.py  start_backend.py  (+12 more)
app/: .env  main.py  main_minimal.py
config/: config.json  test_data.json
docanalyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
migrations/: add_google_oauth_columns.sql
reports/: functional_test_report_20250929_100851.json  functional_test_report_20250929_102922.json  functional_test_report_20250929_103036.json  functional_test_report_20250929_124110.json  registration_report.html
scripts/: README.md  generate_missing_thumbnails.py
test_chroma_db/: chroma.sqlite3
test_chroma_db_singleton/: chroma.sqlite3
test_files/: test_document_20250929_100840.txt  test_document_20250929_102910.txt  (+2 more)
(+375 files in other folders)
