[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docanalyzer"
version = "0.1.0"

[project.optional-dependencies]
rag = [
    "chromadb==0.4.15",
    "sentence-transformers==5.0.0",
    "langchain==0.0.340",
    "langchain-community==0.0.10",
    "websockets==11.0.3",
    "google-generativeai",
    "huggingface-hub==0.34.3",
    "transformers==4.54.1",
    "tokenizers==0.21.4",
    "tf-keras==2.15.0"
]

summarization = [
    # Add summarization dependencies later
]

classification = [
    # Add classification dependencies later
]

ocr = [
    # Add OCR dependencies later
]

layout = [
    # Add layout analysis dependencies later
]

all = [
    "docanalyzer[rag,summarization,classification,ocr,layout]"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["frontend*", "logs*", "tests*", ".venv*"]